# wsi-segmentation

./: .gitignore  LICENSE  README.md  container.def  pyproject.toml  requirements.txt
apptainer/: Apptainer  jupyter_lab_config.py  micromamba_env.yml
notebooks/: 1_Segment_Image_Data_local.ipynb  1_Segment_Image_Data_local.py  1_WSI_Deepcell_Segmentation.ipynb  requirements.txt
singularity/: Apptainer_Micromamba  Singularity  Singularity.def  container.def  ipython_kernel_config.py  micromamba_env.yml  requirements.txt
src/wsi_segmentation/: io_utils.py  segmentation_utils.py
