[project]
name = "wsi_segmentation"  # Required
version = "0.1.0"  # Required
description = "whole slide image segmentation using deepcell"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.8"

license = {file = "LICENSE"}
keywords = ["segmentation", "celldive", "deepcell", "research"]  # Optional

authors = [
  {name = "Jonas Mackerodt", email = "jonas.mackerodt@kennedy.ox.ac.uk" } # Optional
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
  "deepcell>=0.12.5,<1.0",
  "numpy>=1.22.0,<2.0",
  "tensorflow==2.8.0"
]




[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
